--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: exaile # check to see if it's available
 version: '0.1+git' # check versioning
-summary: Exaile is a music player with a simple interface and powerful music management capabilities. # 79 char long summary
+summary: Exaile is a music player # 79 char long summary
 description: |
     Exaile is a music player with a simple interface and powerful music management capabilities. Features include automatic fetching of album art, lyrics fetching, streaming internet radio, tabbed playlists, smart playlists with extensive filtering/search capabilities, and much more. Exaile is written using Python and GTK+ and is easily extensible via plugins. There are over 50 plugins distributed with Exaile that include advanced track tagging, last.fm scrobbling, support for portable media players, podcasts, internet radio such as icecast and Soma.FM, ReplayGain, output via a secondary output device (great for DJs!), and much more.
 grade: stable # must be 'stable' to release into candidate/stable channels
