--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -9,7 +9,7 @@ confinement: strict # use 'strict' once you have the right plugs
 apps:
   exaile:
     command: exaile
-    desktop: $SNAP/exaile.desktop
+    # desktop: $SNAP/exaile.desktop
     # environment: 
       # LC_ALL: C.UTF-8
     plugs:
@@ -18,6 +18,7 @@ apps:
       - network-bind
       - alsa
       - pulseaudio
+      - desktop
      
 parts: 
   my-part:
